# fintech-person-practise

./: README.md  start.sh  启动.md  思路.md
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: analysis.py  factor.py  stock.py
backend/app/routers/: analysis.py  backtest.py  dashboard.py  data.py  factors.py  screener.py
backend/app/schemas/: analysis.py  backtest.py  factor.py  stock.py
backend/app/services/: analysis_service.py  backtest_service.py  data_service.py  factor_engine.py  factor_library.py  screener_service.py
backend/app/utils/: date_utils.py
data/: fintech.db-shm
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: analysis.ts  backtest.ts  client.ts  dashboard.ts  data.ts  factors.ts
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/components/common/: ErrorBoundary.tsx  MathFormula.tsx
frontend/src/hooks/: useAppSettings.ts
frontend/src/locales/: en-US.ts  index.ts  zh-CN.ts
frontend/src/pages/Backtesting/: index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/DataCenter/: index.tsx
frontend/src/pages/FactorAnalysis/: index.tsx
frontend/src/pages/FactorLibrary/: FactorDetail.tsx  index.tsx
frontend/src/pages/StockScreener/: index.tsx
frontend/src/types/: analysis.ts  backtest.ts  factor.ts  index.ts  stock.ts
